force-app/main/default/objects/Contact/fields/Create_a_Record__c.field-meta.xml
<CustomField>
    <fullName>Create_a_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Create a Record</label>
    <type>Checkbox</type>
</CustomField>