force-app/main/default/objects/Contact/fields/Execute_a_Flow__c.field-meta.xml
<CustomField>
    <fullName>Execute_a_Flow__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Execute a Flow</label>
    <type>Checkbox</type>
</CustomField>