force-app/main/default/objects/Contact/fields/Flows__c.field-meta.xml
<CustomField>
    <fullName>Flows__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Flows</label>
    <type>Checkbox</type>
</CustomField>