force-app/main/default/objects/Contact/fields/Post_to_Chatter__c.field-meta.xml
<CustomField>
    <fullName>Post_to_Chatter__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Post to Chatter</label>
    <type>Checkbox</type>
</CustomField>