force-app/main/default/objects/Contact/fields/Quick_Actions__c.field-meta.xml
<CustomField>
    <fullName>Quick_Actions__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Quick Actions</label>
    <type>Checkbox</type>
</CustomField>