force-app/main/default/objects/Contact/fields/Send_an_Email_Alert__c.field-meta.xml
<CustomField>
    <fullName>Send_an_Email_Alert__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send an Email Alert</label>
    <type>Checkbox</type>
</CustomField>