force-app/main/default/objects/Contact/fields/Send_Custom_Notification__c.field-meta.xml
<CustomField>
    <fullName>Send_Custom_Notification__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Send Custom Notification</label>
    <type>Checkbox</type>
</CustomField>