force-app/main/default/objects/Contact/fields/Update_a_Record__c.field-meta.xml
<CustomField>
    <fullName>Update_a_Record__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Update a Record</label>
    <type>Checkbox</type>
</CustomField>